# babbel-demo

./: .env  .gitconfig  .gitignore  BRANCH_PROTECTION.txt  Babbel.spec  Makefile  README.md  README_DMG.txt  README_NEXT_STEPS.txt  README_RUN.txt  Release_Notes.txt  _chat_probe.json  _or_probe_server.json  babbel.cfg  babbel.desktop  babbel_core_upgrade_ultimate_fixed.sh  babbel_demo.py  build_linux.sh  build_mac.sh  build_win.sh  check_babbel_project_state.sh  check_protocols.sh  ci_failure_log.txt  clean_node_rule.py  clean_node_rules_hard.sh  cleanup_preview.sh  cleanup_run_safe.sh  cleanup_wave1.sh  cleanup_wave2.sh  cleanup_wave3.sh  cleanup_wave4.sh  cleanup_wave5.sh  conftest.py  create_dmg.sh  deep_babbel_audit.sh  demo.py  duplicates_final.txt  duplicates_report.txt  events.jsonl  file_structure.txt  (+85 more)
babbel_core/: .DS_Store.from_SRC1  __init__ 2.py  __init__.py  _auth_diag.py  _import_shim.py  anti_chatgpt_guard.py  babbel_core.py  chat.py  ci_failure_log.txt  cleanup_review.sh  config.py  context_carryover.py  conversation_split.py  conversations.py  culture_shift.py  emotion_classifier.py  emotion_scorebar.py  engine.py  engine_memory.py  env_tools.py  fact_risk_checker.py  final_fix_patch.sh  find_dupes.sh  fix_imports_streamlit.py  identity_lock.py  intent_classifier.py  memory_anchor.py  memory_log.json  memory_store.py  memory_tracker.py  node_classifier.py  node_meta.py  node_nudges.py  node_response_rules.json  node_rewrite_v2.py  node_rules.py  node_score.py  openrouter.key  openrouter_env.py  orchestrator 2.py  (+23 more)
babbel_core/_quarantine/: config.py  (+1 more)
(+264 files in other folders)
